--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Webpack-dev-server in root</title>
-    <link rel="stylesheet" type="text/css" href="app/css/app.css">
+    <meta name="viewport" content="user-scalable=1, initial-scale=1, maximum-scale=1" />
+    <link rel="stylesheet" type="text/css" href="app/css/app.css" />
   </head>
   <body>
     Test 1 in root
